# giphytest

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
giphy/: client.py
tests/: conftest.py  test_giphy.py
